--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <form action="">
       <input type="text" class="todo-input" />
-      <button class="todo-input" type="submit"></button>
+      <button class="todo-input" type="submit">+</button>
       <div class="select">
         <select name="todos" class="filter-todo">
           <option value="all">All</option>
