--- a/index.html
+++ b/index.html
@@ -24,18 +24,419 @@
             <input type="text" id="todo-input" placeholder="Enter task" />
             <button class="todo-input-button" type="submit">+</button>
           </form>
-          <div class="select-box">
-            <select name="todos" class="filter-todo">
-              <option value="all">All</option>
-              <option value="completed">Completed</option>
-              <option value="incomplete">Incomplete</option>
-            </select>
-          </div>
         </div>
         <ul id="todo-list"></ul>
       </div>
       <div class="grid-item3">
         <h1 class="water-tracker">Water Tracker</h1>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
+        <button class="button">
+          <svg
+            id="Layer_2"
+            data-name="Layer 2"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 193.27 339.51"
+          >
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #728a6a;
+                  stroke-linecap: round;
+                  stroke-miterlimit: 10;
+                  stroke-width: 7px;
+                }
+
+                .cls-2 {
+                  fill: #beceb8;
+                }
+
+                .cls-2,
+                .cls-3 {
+                  stroke-width: 0px;
+                }
+
+                .cls-3 {
+                  fill: #728a6a;
+                }
+              </style>
+            </defs>
+            <g id="Layer_1-2" data-name="Layer 1">
+              <g>
+                <g>
+                  <path
+                    class="cls-2"
+                    d="m94.84,336.01c-24.51,0-49.54-11.16-66.97-29.85-12.33-13.23-26.52-36.18-24.11-70.4,3.87-54.99,34.94-118.38,45.15-139.21C76.48,40.32,90.22,14.76,95.31,5.85c7.45,9.41,28.64,39.33,51.29,87.64,43.17,92.06,43.17,127.71,43.17,149.01,0,28.43-10.36,52.53-29.96,69.69-17.14,15.01-40.67,23.68-64.56,23.81h-.41Z"
+                  />
+                  <path
+                    class="cls-3"
+                    d="m100.42,4.14h0,0m-4.64,8.09c9.08,12.27,27.72,40.24,47.66,82.75,42.84,91.35,42.84,126.52,42.84,147.53,0,27.39-9.95,50.58-28.77,67.06-16.51,14.46-39.21,22.82-62.27,22.94h-.4c-23.55,0-47.63-10.74-64.41-28.74-11.85-12.72-25.5-34.8-23.18-67.77.64-9.03,2.18-23.57,8.21-45.48,7.43-26.97,19.74-58.07,36.59-92.43C76.8,47.61,89.71,23.22,95.78,12.22M94.79,0s-.01,0-.02,0c-.5.5-11.5,18.5-49,95C6.37,175.38,1.54,217.54.27,235.51c-4.47,63.55,46.96,104,94.57,104,.14,0,.29,0,.43,0,47.58-.25,98-33.22,98-97,0-26-2-62-43.5-150.5C121.6,31.93,95.67,0,94.79,0h0Z"
+                  />
+                </g>
+                <path
+                  class="cls-1"
+                  d="m31.77,263.01c14.63,24.48,19.3,30.02,46,40"
+                />
+              </g>
+            </g>
+          </svg>
+        </button>
       </div>
     </div>
   </body>
