cite my code and made the last changes

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 193.27 339.51"
           >
+            <!--i got help from a friend from line 39 to line 440-->
             <defs>
               <style>
                 .cls-1 {
